<resources>
    <string name="app_name">SlideTimer</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="launchTimerText">Launch Timer</string>

    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="reset_timer_string">Clear Timer</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clock_text">TimeDisplayedHere</string>
    <string name="clock_text_large">00:00</string>
    <string name="time_left_string">01:00</string>
    <string name="time_right_string">00:30</string>
    <string name="time_top_string">01:30</string>
    <string name="time_bottom_string">02:00</string>
    <string name="title_activity_new_timer_setup">NewTimerSetup</string>
    <string name="title_activity_new_timer_setup_slide">NewTimerSetupSlide</string>
    <string name="add_timer_button_string">Add Button</string>

    <string name="timer_finished">FINISHED!</string>
    <string name="timer_zeroed">00:00</string>
</resources>
