<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".SlideActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/SwipeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation = "90"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_right_string"
            android:textSize="25sp"
            android:id="@+id/time_right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-90"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_left_string"
            android:textSize="25sp"
            android:id="@+id/time_left"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_top_string"
            android:textSize="25sp"
            android:id="@+id/time_top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_bottom_string"
            android:textSize="25sp"
            android:id="@+id/time_bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_alignTop="@+id/time_left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Title"
            android:ems="10"
            android:layout_alignBottom="@+id/time_left"
            android:layout_centerHorizontal="true"
            android:id="@+id/textTitle"
            android:singleLine="false"
            android:gravity="center_vertical|center_horizontal" />

    </RelativeLayout>

</FrameLayout>
